# Codename_FireSaga

./: .gitattributes  .gitignore  .lfsconfig  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  EULA.md  LICENCE_ASSETS.md  LICENCE_CONTRIBUTOR.md  LICENCE_SRC.md  Makefile.win  Notes.txt  README.md  ROADMAP.md  SDLtest.c  assets.binou  assets.dvc  basicsFE - Copy.cpp  basicsFE.cpp  basicsFEC.c  basicsFEC.sync-conflict-20190706-194619-VGK63Q7.c  cl.md  classes.cpp  classes.h  classes_FE1.txt  data.bsa  fonts.dvc  gamecontrollerdb.txt  gamecontrollerdb.txt.dvc  items_FE1.txt  mace.h  macefile.c  main.exe.stackdump  makefile  premake5.lua  shared.h  temp.cpp  units_FE1.txt  units_FE1_bibstyle.txt  weapons_FE1.txt  (+2 more)
.dvc/: config
ECS/: ECS.hpp  arrowcomponent.hpp  components.hpp  cursorcomponent.hpp  positioncomponent.hpp  slidecomponent.hpp  spritecomponent.hpp  systems.hpp  textboxcomponent.hpp  textcomponent.hpp  tilecomponent.hpp  unitcomponent.hpp  unitcontainer.hpp
SDL2/: .CRT  .data  .edata  .idata  .pdata  .rdata  .reloc  .text  .tls  .xdata
ai/: aggressive.json  attacks_inrange.json  ballista.json  boss_charge.json  moveto.json  staffbot.json  thief.json  villager.json
analysis/: RNG.py  camp_jobs.py  growths.py
assets/: Firesaga_Palette_V0.aseprite  Heads.aseprite  Palette.aseprite  assets.binou  horse.aseprite  sword.aseprite
bench/: bench.c  bench_RNG.h  bench_jsonio.h  bench_nstr.h
books/: angelic_demonic.json  mathemagics.json
doc/: Notes.txt
include/: AI.h  ECS.hpp  RNG.h  actor.h  arrow.h  arrowcomponent.hpp  aura.h  bitfields.h  camp.h  camp.hpp  characters.h  combat.h  command.hpp  components.hpp  conditions.h  controllerGamepad.h  controllerKeyboard.h  controllerMouse.h  controllerTouchpad.h  controlsystemx.hpp  convoy.h  convoy.hpp  cooldown.h  credits.h  crt.h  cutscene.h  darr.h  datamaker.hpp  debug.h  enums.h  enums.hpp  equations.h  equipment.h  events.h  events.hpp  filesystem.h  filesystem.hpp  fps_fsm.h  fsm.h  game.h  (+96 more)
items/: Achilles.json  AdaptedCrossbow.json  AdaptedShield.json  Ancile.json  AngelFeather.json  AngelHair.json  Apollo.json  Artemis.json  BallLightning.json  Battleaxe.json  BlindingClarity.json  Boulder.json  Braquemard.json  Broadsword.json  Broken.json  Caduceus.json  Carnwennan.json  Cibo.json  Claw.json  Cloak.json  Club.json  CompositeBow.json  Consume.json  Cross.json  Crossbow.json  Crystal.json  Dague.json  DamasAxe.json  DamasLance.json  DamasSword.json  Daybreak.json  DemonFang.json  DivineProtector.json  Downfall.json  Dusk.json  Ember.json  Espadon.json  Excalibur.json  Exsangue.json  Fauchon.json  (+108 more)
licenses/: SDL2.0.txt  cJson.txt  entityx.txt  lodepng.txt  physfs.txt  stb.txt
lookup/: harmonic.h
maps/: map_test.json
mounts/: Beaver.json  Divine.json  Eagle.json  Goiteia.json  Goose.json  Horse.json  Horsie.json  Manwe.json  Nibal.json  Pegasus.json  Raia.json  Salamander.json
names/: SDL_events.h  ai.h  ai_icons.h  alignment.h  armies.h  books.h  buttons.h  camp_jobs.h  chapters.h  classes.h  components.h  conditions.h  dir.h  errors.h  events.h  fsm_inputs.h  game.h  game_states.h  game_substates.h  game_valid_states.h  input.h  input_flags.h  items.h  items_effects.h  items_stats.h  items_types.h  json_elements.h  menu.h  menu_options.h  mount_class_modifiers.h  mounts.h  mounts_types.h  mvt_types.h  narrative_conditions_misc.h  palettes.h  promotion_bonuses.h  scene.h  scene_time.h  shops.h  skills.h  (+23 more)
promotion/: Battlemage.json
src/: AI.c  CMakeLists.txt  ECS.cpp  RNG.c  actor.c  arrow.c  aura.c  basicsFE.cpp  basicsFEC.cpp  bitfields.c  camp.c  camp.cpp  combat.c  command.cpp  conditions.c  controllerGamepad.c  controllerKeyboard.c  controllerMouse.c  controllerTouchpad.c  controlsystemx.cpp  convoy.c  convoy.cpp  cooldown.c  credits.c  crt.c  cutscene.c  datamaker.cpp  debug.c  enums.c  equations.c  equipment.c  events.c  filesystem.c  filesystem.cpp  fps_fsm.c  fsm.c  game.c  game.cpp  gameobject.cpp  generic.cpp  (+79 more)
src/bars/: circle.c  combat_hp.c  map_hp.c  simple.c  slider_bar.c  stat.c  texture.c  topoff.c
src/controller/: fsm.c  gamepad.c  keyboard.c  mouse.c  touchpad.c
src/game/: AI.c  combat.c  control.c  cursor.c  game.c  map.c  menu.c  popup.c  unit.c
src/map/: animation.c  conditions.c  find.c  flags.c  map.c  ontile.c  path.c  render.c  tiles.c
src/menu/: action.c  action_platform.c  deployment.c  first.c  first_platform.c  fsm.c  growths.c  item_action.c  item_drop.c  item_equip_L_R_1H.c  item_select.c  loadout_select.c  map_action.c  menu.c  option_fsm.c  player_select.c  pre_combat.c  staff_select.c  stats.c  trade.c  unit_action.c  which_hand.c  which_hand_fsm.c
src/popup/: loadout_stats.c  map_combat.c  objective.c  popup.c  pre_combat.c  text_box.c  text_bubble.c  tile.c  unit.c
src/systems/: control.c  map_end.c  map_end.h  render.c  slide.c  time_system.c  turn_end.c
src/unit/: anim.c  bonus.c  boss.c  equipment.c  flags.c  loadout.c  mount.c  party.c  range.c  stats.c  status.c  unit.c
test/: CMakeLists.txt  debug_map.json  test.c  test.cpp  test_AI.h  test_RNG.h  test_arrow.h  test_bitfields.h  test_camp.h  test_camp.hpp  test_combat.h  test_conditions.h  test_convoy.h  test_convoy.hpp  test_crt.h  test_darr.h  test_enums.h  test_equations.h  test_events.h  test_filesystem.h  test_filesystem.hpp  test_game.h  test_game.hpp  test_infusion.h  test_item.h  test_item.hpp  test_leaks.h  test_linalg.cpp  test_linalg.h  test_linalg.hpp  test_map.h  test_map.hpp  test_menu.h  test_menu.hpp  test_mounts.h  test_narrative.h  test_nstr.h  test_octant.h  test_party.h  test_pathfinding.h  (+23 more)
test/bars/: test_slider_bar.h
test/integration/: debg_save.json  debug_save.json  debug_save2.json  test_aura.h  test_basic.h  test_conditions.h  test_cooldown.h
test/menu/: test_action.h  test_deployment.h  test_growths.h  test_item_drop.h  test_item_select.h  test_player_select.h  test_pre_combat.h  test_stats.h  test_weapon_select.h  test_which_hand.h
test/popup/: test_loadout_stats.h  test_map_combat.h  test_objective.h  test_text_box.h  test_text_bubble.h  test_unit.h
(+847 files in other folders)
